plugins/kotlin/j2k/shared/tests/testData/newJ2k/invalidCode/annotationApplicationWithoutName.java
// IGNORE_K2
@()
class Test {

}